// To regenerate service.pb.go run hack/update-generated-kms.sh
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.cloudfoundry.credhub.services.grpc";
option java_outer_classname = "PasswordGeneratorProto";
option objc_class_prefix = "PGP";

package v1beta1;

service PasswordGeneratorService {
    rpc Generate(GenerateRequest) returns (GenerateResponse) {}
}

message GenerateRequest {
    string length = 1;
}

message GenerateResponse {
    string value = 1;
}
